--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -104,6 +104,8 @@ body{
     width: 49%;
 }
 .panier a{
+    color: #ffffff;
+    cursor: pointer;
     text-decoration: none;
 }
 .table_product_panier .col{
